--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Home | Odin-Recipes </title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/lasagna.html">Lasagna</a>
+    <ul>
+        <a href="./recipes/lasagna.html">Lasagna</a>
+        <a href="./recipes/rolledsugarcookies.html">Rolled Sugar Cookies</a>
+        <a href="./recipes/banabread.html">Banana Bread</a>
+    </ul>
 </body>
 </html>
