--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Recipes | Lasagna </title>
 </head>
 <body>
     <h1>Recipe for Lasagna</h1>
@@ -25,27 +25,37 @@
     <h4>Steps</h4>
     <ol>
         <li>
-            Cook the meat: Cook the ground meat in a skillet until browned and crumbly. 
-            Add the onion and continue cooking until it's translucent. 
-            Stir in the canned tomato products, half of the parsley, garlic, 
-            basil, 1.5 teaspoons of salt, oregano, and sugar.
+            <p>
+                Cook the meat: Cook the ground meat in a skillet until browned and crumbly. 
+                Add the onion and continue cooking until it's translucent. 
+                Stir in the canned tomato products, half of the parsley, garlic, 
+                basil, 1.5 teaspoons of salt, oregano, and sugar.
+            </p>
         </li>
         <li>
-            Cook the noodles: Boil the lasagna noodles in lightly salted water 
-            until they're al dentle.
+            <p>
+                Cook the noodles: Boil the lasagna noodles in lightly salted water 
+                until they're al dentle.
+            </p>
         </li>
         <li>
-            Make the cheese layer: Mix cottage cheese, Parmesan cheese, eggs, 
-            the remaining parsley, the remaining salt, and pepper in a bowl.
+            <p>
+                Make the cheese layer: Mix cottage cheese, Parmesan cheese, eggs, 
+                the remaining parsley, the remaining salt, and pepper in a bowl.
+            </p>
         </li>
         <li>
-            Assemble the lasagna: Layer the ingredients according to the recipe 
-            (starting with sauce and ending with mozzarella) 
-            until the lasagna is assembled.
+            <p>
+                Assemble the lasagna: Layer the ingredients according to the recipe 
+                (starting with sauce and ending with mozzarella) 
+                until the lasagna is assembled.
+            </p>
         </li>
         <li>
-            Bake the lasagna: Cover with foil and bake in the preheated oven for
-             about half an hour. Remove the foil and continue baking until the top is golden brown.
+            <p>
+                Bake the lasagna: Cover with foil and bake in the preheated oven for
+                about half an hour. Remove the foil and continue baking until the top is golden brown.
+            </p>
         </li>
     </ol>
 </body>
