html files after changes

--- a/index.html
+++ b/index.html
@@ -4,13 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home | Odin-Recipes </title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-        <a href="./recipes/lasagna.html">Lasagna</a>
-        <a href="./recipes/rolledsugarcookies.html">Rolled Sugar Cookies</a>
-        <a href="./recipes/banabread.html">Banana Bread</a>
+    <h1 class="title">Odin Recipes</h1>
+    <img class="image" src="cook.jpg" alt="Cook pic">
+    <div id="div">
+        <p class="middle">Today's Recipes are....</p>
+    </div>
+    <ul class="list">
+        <li><a href="./recipes/lasagna.html" target="_blank">Lasagna</a></li>
+        <li><a href="./recipes/rolledsugarcookies.html" target="_blank">Rolled Sugar Cookies</a></li>
+        <li><a href="./recipes/banabread.html" target="_blank">Banana Bread</a></li>
     </ul>
 </body>
 </html>
