styles link is added for each recipe pages

--- a/recipes/banabread.html
+++ b/recipes/banabread.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipes | Banana Bread</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1>Recipe for Banana Bread</h1>
-    <img src="recipe_images/banabread.jpg" alt="Banana Bread">
-    <h3>Description</h3>
-    <h4>Ingredients</h4>
-    <ul>
+    <h1 class="title">Recipe for Banana Bread</h1>
+    <img class="image" src="recipe_images/banabread.jpg" alt="Banana Bread">
+    <h3 class="description">Description</h3>
+    <h4 class="sides">Ingredients</h4>
+    <ul class="rem">
         <li>Butter</li>
         <li>Bananas</li>
         <li>Eggs</li>
@@ -19,8 +20,8 @@
         <li>Baking Soda</li>
         <li>Salt</li>
     </ul>
-    <h4>Steps</h4>
-    <ol>
+    <h4 class="sides">Steps</h4>
+    <ol class="rem">
         <li>
             <p>Combine the dry ingredients in one bowl.</p>
         </li>
