styles are added to each recipe page

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipes | Lasagna </title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1>Recipe for Lasagna</h1>
-    <img src="./recipe_images/lasagna.webp" alt="Lasagna">
-    <h3>Description</h3>
-    <h4>Ingredients</h4>
-    <ul>
+    <h1 class="title">Recipe for Lasagna</h1>
+    <img class="image" src="./recipe_images/lasagna.webp" alt="Lasagna">
+    <h3 class="description">Description</h3>
+    <h4 class="sides">Ingredients</h4>
+    <ul class="rem">
         <li>Meat</li>
         <li>Onion</li>
         <li>Canned Tomatoes</li>
@@ -22,8 +23,8 @@
         <li>Eggs</li>
         <li>Seasoning</li>
     </ul>
-    <h4>Steps</h4>
-    <ol>
+    <h4 class="sides">Steps</h4>
+    <ol class="rem">
         <li>
             <p>
                 Cook the meat: Cook the ground meat in a skillet until browned and crumbly. 
