--- a/recipes/rolledsugarcookies.html
+++ b/recipes/rolledsugarcookies.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipes | Rolled Sugar cookies</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1>Recipe for Pulihora</h1>
-    <img src="recipe_images/rolledsugarcookies.jpg" alt="cookies">
-    <h3>Description</h3>
-    <h4>Ingredients</h4>
-    <ul>
+    <h1 class="title">Recipe for Rolled Sugar Cookies</h1>
+    <img class="image" src="recipe_images/rolledsugarcookies.jpg" alt="cookies">
+    <h3 class="description">Description</h3>
+    <h4 class="sides">Ingredients</h4>
+    <ul class="rem">
         <li>Butter</li>
         <li>Sugar</li>
         <li>Eggs</li>
@@ -19,8 +20,8 @@
         <li>Baking Powder</li>
         <li>Salt</li>
     </ul>
-    <h4>Steps</h4>
-    <ol>
+    <h4 class="sides">Steps</h4>
+    <ol class="rem">
         <li><p>Cream the butter and sugar: The first thing you'll do is beat together the butter and sugar with an electric mixer (hand-held or stand mixer) until the mixture is light and fluffy. Depending on the mixer you use, this could take four to five minutes. Why do you cream butter and sugar in the first place? It's all about incorporating air into the mixture. The micro pockets of air you create by creaming cause the dough to rise as it bakes so your cookies will be light in texture instead of flat and dense. Cool (not cold) butter works best; butter that's too warm won't let you create the structure you need.</p></li>
         <li><p>Add eggs and vanilla: After the butter and sugar are creamed, add the eggs and vanilla. Many home cooks like to add the eggs one at a time. You'll want the eggs and vanilla to be thoroughly mixed into the butter and sugar before adding the dry ingredients.</p></li>
         <li><p>Add flour, baking powder, and salt: Measure these dry ingredients into a separate bowl, whisk them together thoroughly, then turn your mixer to a lower speed and stir the flour mixture into the butter and sugar mixture. Be sure to scrape the sides of the mixing bowl a couple of times so there are no streaks of flour in the dough.</p></li>
